update to css and html

--- a/index.html
+++ b/index.html
@@ -23,8 +23,17 @@
       </div>
 
       <div class="pricing-card">
-        Pageviews $ /month Monthly Billing Yearly Billing 25% discount Unlimited
-        websites 100% data ownership Email reports Start my trial
+        <div class="pricing-info">
+          <div class="pageviews">100k Pageviews</div>
+          <div class="per-month"><span>$16.00</span> /month</div>
+        </div>
+
+        <div class="slider">
+          <input type="range" min="0" max="0" />
+        </div>
+
+        Monthly Billing Yearly Billing 25% discount Unlimited websites 100% data
+        ownership Email reports Start my trial
       </div>
     </div>
   </body>
