styling changes with CSS

--- a/index.html
+++ b/index.html
@@ -29,11 +29,35 @@
         </div>
 
         <div class="slider">
-          <input type="range" min="0" max="0" />
+          <input class="range" type="range" min="0" max="0" />
         </div>
 
-        Monthly Billing Yearly Billing 25% discount Unlimited websites 100% data
-        ownership Email reports Start my trial
+        <div class="billing-info">
+          <div class="monthly">Monthly Billing</div>
+          <div class="switch-wrapper">
+            <label class="switch-label">
+              <input class="switch-input" type="checkbox" name="text" />
+              <span class="switch"></span>
+            </label>
+          </div>
+          <div class="yearly">Yearly Billing</div>
+          <div class="discount">25% discount</div>
+        </div>
+
+        <div class="features">
+          <div class="feature-content">
+            <img class="icon-check" src="images/icon-check.svg" />
+            Unlimited websites <br />
+
+            <img class="icon-check" src="images/icon-check.svg" />
+            100% data ownership<br />
+            <img class="icon-check" src="images/icon-check.svg" />
+            Email reports
+          </div>
+          <div class="start-trial">
+            <button class="btn">Start my trial</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
