Added javascript file and applied changes to CSS

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
       <div class="pricing-card">
         <div class="pricing-info">
-          <div class="pageviews">100k Pageviews</div>
-          <div class="per-month"><span>$16.00</span> /month</div>
+          <div id="pageviews" class="pageviews">100k Pageviews</div>
+          <div id="pricing" class="per-month"><span>$16.00</span> /month</div>
         </div>
 
         <div class="slider">
-          <input class="range" type="range" min="0" max="0" />
+          <input id="range" class="range" type="range" min="0" max="0" />
         </div>
 
         <div class="billing-info">
@@ -60,5 +60,6 @@
         </div>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
