updates to the read.me file

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </label>
           </div>
           <div class="yearly">Yearly Billing</div>
-          <div class="discount">25% discount</div>
+          <div class="discount">25% discount</div> <div class="discount-mobile">-25%</div> 
         </div>
 
         <div class="features">
